tests/baselines/reference/strictOptionalProperties3.errors.txt
a.js(7,7): error TS2322: Type '{ value: undefined; }' is not assignable to type 'A'.
  Properties not assignable with exactOptionalPropertyTypes: value
  Types of property 'value' are incompatible.
    Type 'undefined' is not assignable to type 'number'.
a.js(14,7): error TS2322: Type '{ value: undefined; }' is not assignable to type 'B'.
  Properties not assignable with exactOptionalPropertyTypes: value
  Types of property 'value' are incompatible.
    Type 'undefined' is not assignable to type 'number'.


==== a.js (2 errors) ====
    /**
     * @typedef {object} A
     * @property {number} [value]
     */
    
    /** @type {A} */
    const a = { value: undefined }; // error
          ~
!!! error TS2322: Type '{ value: undefined; }' is not assignable to type 'A'.
!!! error TS2322:   Properties not assignable with exactOptionalPropertyTypes: value
!!! error TS2322:   Types of property 'value' are incompatible.
!!! error TS2322:     Type 'undefined' is not assignable to type 'number'.
    
    /**
     * @typedef {{ value?: number }} B
     */
    
    /** @type {B} */
    const b = { value: undefined }; // error
          ~
!!! error TS2322: Type '{ value: undefined; }' is not assignable to type 'B'.
!!! error TS2322:   Properties not assignable with exactOptionalPropertyTypes: value
!!! error TS2322:   Types of property 'value' are incompatible.
!!! error TS2322:     Type 'undefined' is not assignable to type 'number'.
    